--- a/0x07-proyecto/0-index.html
+++ b/0x07-proyecto/0-index.html
@@ -12,8 +12,10 @@
 
   <span id="error"></span>
 
-  <section id="randomMichis">
+  <section id="imagenAleatoria">
     <h2>Random Images</h2>
+
+    <span id="error"></span>
 
     <article>
       <img id="img1" width="150" alt="random picture">
@@ -29,7 +31,7 @@
     <button onclick="loadRandomImage()">Recargar</button>
   </section>
   
-  <section id="favoritesMichis">
+  <section id="imagenesFavoritas">
     <h2>My favourites images</h2>
 
     <article>
