Add comments for 0 files GET methos

--- a/0x07-proyecto/0-index.html
+++ b/0x07-proyecto/0-index.html
@@ -8,6 +8,7 @@
   <script src="./0-main.js"></script>
 </head>
 <body>
+  <!-- === 0-index.html IMPLEMENTACION DEL METODO GET -->
   <h1>Images App</h1>
 
   <span id="error"></span>
